--- a/.github/workflows/pr-comment-slack-notify.yml
+++ b/.github/workflows/pr-comment-slack-notify.yml
@@ -16,7 +16,8 @@ jobs:
     steps:
       - name: Send Slack notification
         env:
-          SLACK_WEBHOOK_URL: ${{ secrets.SLACK_WEBHOOK_URL }}
+          SLACK_BOT_TOKEN: ${{ secrets.SLACK_BOT_TOKEN }}
+          SLACK_CHANNEL_ID: ${{ secrets.SLACK_CHANNEL_ID }}
           EVENT_NAME: ${{ github.event_name }}
           COMMENT_BODY: ${{ github.event.comment.body }}
           COMMENT_URL: ${{ github.event.comment.html_url }}
@@ -52,6 +53,7 @@ jobs:
 
           # Build JSON payload to match GitHub's native Slack notification style
           PAYLOAD=$(jq -n \
+            --arg channel "$SLACK_CHANNEL_ID" \
             --arg repo_short "$REPO_SHORT" \
             --arg pr_url "$PR_URL" \
             --arg pr_number "$PR_NUMBER" \
@@ -61,6 +63,7 @@ jobs:
             --arg comment_url "$COMMENT_URL" \
             --arg avatar "$COMMENTER_AVATAR" \
             '{
+              "channel": $channel,
               "username": $commenter,
               "icon_url": $avatar,
               "text": ($commenter + " commented on [" + $repo_short + "#" + $pr_number + "] <" + $pr_url + "|" + $pr_title + ">"),
@@ -90,6 +93,7 @@ jobs:
               ]
             }')
 
-          curl -X POST "$SLACK_WEBHOOK_URL" \
+          curl -X POST "https://slack.com/api/chat.postMessage" \
+            -H "Authorization: Bearer $SLACK_BOT_TOKEN" \
             -H "Content-Type: application/json" \
             -d "$PAYLOAD"
